--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ thiserror = "1.0"
 async-trait = "0.1"
 bytes = "1.5"
 anyhow = "1.0"
+actix-files = "0.6"
 
 # For MCP integration
 jsonrpc = "0.13"
